[package]
name = "calc-bcrypt-webasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# crate-type = ["cdylib"]

[dependencies]
bcrypt = "0.14.0"
getrandom = { version = "0.2.8", features = ["js"] }
kobold = "0.5.0"
wasm-bindgen = "0.2.84"
web-sys = "0.3.61"
